--- a/q/274485.html
+++ b/q/274485.html
@@ -26,22 +26,55 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>008</td><td>Retina 0.8.2</td><td>240728T134116Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274505#274505">Neil</a></td></tr>
-<tr d-ix="1"><td>004</td><td>K ngn/k</td><td>240728T133436Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274504#274504">akamayu</a></td></tr>
-<tr d-ix="2"><td>027</td><td>PowerShell</td><td>240728T121823Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274500#274500">user3141</a></td></tr>
-<tr d-ix="3"><td>036</td><td>Python 3</td><td>240728T115156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274497#274497">matteo_c</a></td></tr>
-<tr d-ix="4"><td>064</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
-<tr d-ix="5"><td>015</td><td>Arturo</td><td>240728T112337Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274496#274496">chunes</a></td></tr>
-<tr d-ix="6"><td>003</td><td>Uiua SBCS</td><td>240728T105800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274495#274495">chunes</a></td></tr>
-<tr d-ix="7"><td>058</td><td>JavaScript Node.js</td><td>240728T104100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274493#274493">Andrew B</a></td></tr>
-<tr d-ix="8"><td>026</td><td>Python</td><td>240728T102653Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274492#274492">xnor</a></td></tr>
-<tr d-ix="9"><td>024</td><td>JavaScript ES6</td><td>240728T101535Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274489#274489">Arnauld</a></td></tr>
-<tr d-ix="10"><td>057</td><td>C tcc</td><td>240728T101650Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274490#274490">ovs</a></td></tr>
-<tr d-ix="11"><td>002</td><td>Vyxal 3</td><td>240728T101335Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274488#274488">RubenVer</a></td></tr>
-<tr d-ix="12"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
-<tr d-ix="13"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
+<tr d-ix="0"><td>005</td><td>Haskell + hgl</td><td>240728T134833Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274506#274506">Wheat Wi</a></td></tr>
+<tr d-ix="1"><td>008</td><td>Retina 0.8.2</td><td>240728T134116Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274505#274505">Neil</a></td></tr>
+<tr d-ix="2"><td>004</td><td>K ngn/k</td><td>240728T133436Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274504#274504">akamayu</a></td></tr>
+<tr d-ix="3"><td>027</td><td>PowerShell</td><td>240728T121823Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274500#274500">user3141</a></td></tr>
+<tr d-ix="4"><td>036</td><td>Python 3</td><td>240728T115156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274497#274497">matteo_c</a></td></tr>
+<tr d-ix="5"><td>064</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
+<tr d-ix="6"><td>015</td><td>Arturo</td><td>240728T112337Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274496#274496">chunes</a></td></tr>
+<tr d-ix="7"><td>003</td><td>Uiua SBCS</td><td>240728T105800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274495#274495">chunes</a></td></tr>
+<tr d-ix="8"><td>058</td><td>JavaScript Node.js</td><td>240728T104100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274493#274493">Andrew B</a></td></tr>
+<tr d-ix="9"><td>026</td><td>Python</td><td>240728T102653Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274492#274492">xnor</a></td></tr>
+<tr d-ix="10"><td>024</td><td>JavaScript ES6</td><td>240728T101535Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274489#274489">Arnauld</a></td></tr>
+<tr d-ix="11"><td>057</td><td>C tcc</td><td>240728T101650Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274490#274490">ovs</a></td></tr>
+<tr d-ix="12"><td>002</td><td>Vyxal 3</td><td>240728T101335Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274488#274488">RubenVer</a></td></tr>
+<tr d-ix="13"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
+<tr d-ix="14"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 8 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 5 bytes</h1>
+<pre><code>gj&lt;nb
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=bZBNDoIwEIXjllOMO03GxPJTkcAB3LEnxGAArZYfEU7jho3hTHoaB1DEaNKmed-8NzPptTkEl1MkZX2fiiTPihLOVSBFLKIQ3CKSVRgpr4J7q8p4YTaxsz_a6a5Xj4mSBCIFB8JMAUi2MMsLsCGekwLwwGNgWbBJS78DSABV1FAftE5KRfapL_F9BkZ-8hjIkH_lDKJ8lDXIpxPVusvb6mguzfnq2PajXUbplrKRa0Ue_oeauMafDn7_JXXdv08" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h2>Explanation</h2>
+<p>Nub and get the last element.</p>
+<h1>Parser, 16 bytes</h1>
+<pre><code>gk$(h'&gt;~nxy)&lt;*h'
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8FNxczcgvyiEoXC0sSczLTM1BSFgKLUnNKUVC6oRMDS0pI0XYtNabbp2SoaGep2dXkVlZo2WhnqEIlbjFy5iZl5CrYKKflcCgq58QoaBUUKNgppmkCegkK0QrShgpWVgmdeSSxYQAcooGOkY6xjAuebAHlGOoYIeQMdGIKLAdUD1ZjqGOqYoegzBYqaIek1BaozAYoag7EZSBbJXqA9KCaCzAO6BUk3SNQQSZU5UI0ZFlELHUsdDBNiIUGyYAGEBgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Since this challenge is pretty trivial to do using the normal library, I thought I'd try a parser only version.</p>
+<h2>Explanation</h2>
+<p>We create a parser which matches all characters that are not preceded by a copy of themselves.</p>
+<ul>
+<li><code>h'</code>: Get some prefix.</li>
+<li><code>nxy</code>: Parse a character not present in the prefix.</li>
+<li><code>h'</code>: Parse some number of characters.</li>
+<li><code>gk</code>: Get the highest priority parse.</li>
+</ul>
+<p>The priority here is determined by <code>h'</code> with the longest parse having the highest priority.</p>
+<h1>Reflection</h1>
+<p>The normal version of this can't reasonably be improved. Improvements can be made based on the parser version, but it will never be on par with the other version for this task.</p>
+<ul>
+<li><code>gk</code> gets the first <em>complete</em> parse. There should be a parser consumer which just gets the first parse. This would make the <code>&lt;*h'</code> unnecessary and save a bunch of bytes here.</li>
+<li><code>(h'*&gt;)</code> and <code>(&lt;*h')</code> could probably use shortcuts. I use the former <a href="https://codegolf.stackexchange.com/a/269445/56656">here</a>. This would be superseded here by the above improvement, but would probably be useful in the long term.</li>
+<li>I use <code>(h'&gt;~)</code> here and <a href="https://codegolf.stackexchange.com/a/239899/56656">here</a> and the very similar <code>(h_&gt;~)</code> <a href="https://codegolf.stackexchange.com/a/269445/56656">here</a> and <a href="https://codegolf.stackexchange.com/a/274410/56656">here</a> (the latter is now superseded by <code>(h_&lt;~)</code>). There is some sort of common pattern here that seems likely to continue to pop up. I should have shortcuts for a bunch of these variants.</li>
+</ul>
+<p>There are also some things I noticed which wouldn't save bytes here but should be done.</p>
+<ul>
+<li><code>nχ</code> and <code>nxy</code> could use versions precomposed with <code>my</code> and <code>so</code>.</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 8 bytes</h1>
 <pre><code>D`.
 !`.$
 </code></pre>
@@ -53,13 +86,13 @@
 </code></pre>
 <p>Keep the last remaining character.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 4 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 4 bytes</h1>
 <p>The last <code>*|</code> unique <code>?</code> element.</p>
 <pre><code>*|?:
 </code></pre>
 <p><a href="https://ngn.bitbucket.io/k#eJxLs9Kqsbfi4kpzUHLUdXL0c/QBk36Ouj6OTkoAcrEHVA==" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 27 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 27 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>($args|% *ay|select -u)[-1]
 </code></pre>
@@ -69,13 +102,13 @@
 </code></pre>
 <p>Converts the input string to a char array by calling the string's member &quot;ToCharArray&quot;, then selecting only unique characters, and picking the last char.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda x:list({a:0for a in x})[-1]
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/7/P802JzE3KSVRocIqJ7O4RKM60cogLb9IIVEhM0@holYzWtcw9n9BUWZeiUaahpKjrpOjn6MPmPRz1PVxdFLS1PwPAA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1>Google Sheets, 64 bytes</h1>
+<div id="pu5" class="pu"><h1>Google Sheets, 64 bytes</h1>
 <pre><code>=+let(β,A:A,γ,sort(row(β)),sort(β,1=countifs(β,β,γ,&quot;&lt;=&quot;&amp;γ),,γ,))
 </code></pre>
 <p>...or:</p>
@@ -84,7 +117,7 @@
 <p>Put the array in column <code>A1:A</code> and the formula in cell <code>B1</code>.</p>
 <p><img src="https://i.sstatic.net/cWoifoPg.png" alt="screenshot" /></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 15 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 15 bytes</h1>
 <pre><code>$=&gt;[last∪&lt;=&amp;]
 </code></pre>
 <p><a href="https://i.sstatic.net/OlBT6a31.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/OlBT6a31.png" alt="running the code in arturo interpreter" /></a></p>
@@ -96,7 +129,7 @@ last   ; last element of...
 </code></pre>
 <p>This is two bytes shorter than <code>last unique&amp;</code>, but requires the latest version for <code>∪</code>, hence it won't work online yet.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 3 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 3 bytes</h1>
 <pre><code>⊢⇌◴
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_3__RiDihpAg4oqi4oeM4pe0CgpGICJBLUJBTkFMLUJBTkFOQS1MQUIiCkYgIjEyMzEyMzMyIgo=" rel="nofollow noreferrer">Try it!</a></p>
@@ -105,20 +138,20 @@ last   ; last element of...
 ⊢⇌   # ‎⁢last
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[a={},b='',[...s].map(e=&gt;(e in a)?0:[a[e]=1,b=e]),b][3]
 </code></pre>
 <p><a href="https://tio.run/##HcqxCsIwEADQX@mWBJJDcROuks6lP3DccK1XqdSkNOIifnsUlze9u7ykTPuyPUPKV60z1oItCb4/fkRjPAFAYXjIZhVbq82SGnGXw5mElPH4W8rOj0wnrlNOJa8Ka77Z2ZoYujjE/u8QQx8741z9Ag" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 26 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 26 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:max(s,key=s.find)
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUaHYKjexQqNYJzu10rZYLy0zL0Xzf0FRZl6JRpqGkqOuk6Ofow@Y9HPU9XF0UtLU/A8A" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Takes a string as input. <code>s.find(c)</code> outputs the first index in <code>s</code> where the character <code>c</code> appears, so using <code>s.find</code> as a key for <code>max</code> returns the character whose first occurrence in <code>s</code> comes latest.</p>
 </div>
-<div id="pu9" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
+<div id="pu10" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
 <p>Note that it works because <code>Set</code> is guaranteed to maintain the insertion order of its elements.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[...new Set(s)].pop()
@@ -133,13 +166,13 @@ last   ; last element of...
 .pop()       // return the last element
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="http://savannah.nongnu.org/projects/tinycc" rel="nofollow noreferrer">C (tcc)</a>, 57 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="http://savannah.nongnu.org/projects/tinycc" rel="nofollow noreferrer">C (tcc)</a>, 57 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>k;f(char*s){for(int v[128]={};*s;s++)k=v[*s]++?k:*s;k=k;}
 </code></pre>
 <p><a href="https://tio.run/##S9YtSU7@/z/bOk0jOSOxSKtYszotv0gjM69EoSza0Mgi1ra61lqr2LpYW1sz27YsWqs4VlvbPtsKKJRtm21d@z83MTNPQ7OaS0GhoLQEZIRGmoaSo66To5@jD5j0c9T1cXRS0tS05qr9DwA" rel="nofollow noreferrer" title="C (tcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu11" class="pu"><h1>Vyxal 3, 2 bytes</h1>
+<div id="pu12" class="pu"><h1>Vyxal 3, 2 bytes</h1>
 <pre><code>ut
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCJcIkEtQkFOQUwtQkFOQU5BLUxBQlwiIHV0IiwiIiwiIiwiMy40LjIiXQ==" rel="nofollow noreferrer">try</a></p>
@@ -149,13 +182,13 @@ last   ; last element of...
 <li>of the input</li>
 </ul>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://github.com/abrudz/dyalog_vision/" rel="nofollow noreferrer">APL (Dyalog Vision)</a>, 2 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://github.com/abrudz/dyalog_vision/" rel="nofollow noreferrer">APL (Dyalog Vision)</a>, 2 bytes</h1>
 
 <pre class="lang-apl prettyprint-override"><code>⊇∪
 </code></pre>
 <p><code>⊇</code> last <code>∪</code> unique</p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
 <pre><code>Ut
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJVdCIsIiIsIkEtQkFOQUwtQkFOQU5BLUxBQiJd" rel="nofollow noreferrer">Try it Online!</a></p>
