--- a/q/274498.html
+++ b/q/274498.html
@@ -26,18 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>021</td><td>K ngn/k</td><td>240728T125025Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274503#274503">akamayu</a></td></tr>
-<tr d-ix="1"><td>065</td><td>JavaScript Node.js</td><td>240728T122454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274501#274501">l4m2</a></td></tr>
-<tr d-ix="2"><td>107</td><td>Google Sheets</td><td>240728T123106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274502#274502">doubleun</a></td></tr>
-<tr d-ix="3"><td>013</td><td>Vyxal</td><td>240728T120204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274499#274499">lyxal</a></td></tr>
+<tr d-ix="0"><td>058</td><td>JavaScript ES6</td><td>240728T134928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274507#274507">Arnauld</a></td></tr>
+<tr d-ix="1"><td>021</td><td>K ngn/k</td><td>240728T125025Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274503#274503">akamayu</a></td></tr>
+<tr d-ix="2"><td>065</td><td>JavaScript Node.js</td><td>240728T122454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274501#274501">l4m2</a></td></tr>
+<tr d-ix="3"><td>107</td><td>Google Sheets</td><td>240728T123106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274502#274502">doubleun</a></td></tr>
+<tr d-ix="4"><td>013</td><td>Vyxal</td><td>240728T120204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274499#274499">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 21 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 58 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(a,b,c)=&gt;a+b+c^2048?f(b,c,Math.random()*800+1|0):[a,b,c]
+</code></pre>
+<p><a href="https://tio.run/##HYxLDsIgFAD3PcVbgrQNNS4aK3oCT2DUvFLQauU1hbjwc3URXU0yycwF7@j11I@hcNSZGK1imLe55mqNohX6MJeLemNZUvkWw7mc0HV0Y3xWSymql@TL3T/YR0sTG0wABwpkk7CC6kchODwzAE3O02DKgU7MMs6b7B0/NIY@@VgUPqC@Hn3/MCqt5Rc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 21 bytes</h1>
 <p>Randomly pick three numbers from <code>[1,800]</code> until the sum is 2048.</p>
 <pre><code>(~2048=+/){1+3?799}/1
 </code></pre>
 <p><a href="https://ngn.bitbucket.io/k#eJzLtNKoMzIwsbDV1tesNtQ2tje3tKzVN+TiSs5ITc62qtZQ0dav0NRRUrBVUNLRB3LBHG0gR6WyVr+iFqrQIZOLi0tfIag0TyE3vyhVoSQzN7VYoSRfoTgjv1yhJCNVoSgxLyU/Ny+1uBiqA7u9Q0UOANs1U9I=" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 65 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 65 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;[X=[],1,2].map(i=&gt;n-=X[+i]=Math.random()*801|0)|~n?f(2047):X
 </code></pre>
@@ -52,7 +59,7 @@ f=n=&gt;(a=R())+(b=R())+(c=R())^2048?f():[a,b,c]
 <p><a href="https://tio.run/##LYpBDoIwEADvvmRrKSnGA4qLL/DC1WiyFlAUu4Q2pjG@3UrUuUwymSs9yJmxG7yyXDcxVhiw3JG/pCPZmu8g5rnWMnvpWYsWSyCsQAgJp7/N18eFXubbFsR6T8kpMYfY8ggBdRE2mS6kDMKwddw3ac9nmEYR3zz4bopRKefJ3JTrng2ufnwA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Silly. Assumes infinite stack.</p>
 </div>
-<div id="pu2" class="pu"><h1>Google Sheets, 107 bytes</h1>
+<div id="pu3" class="pu"><h1>Google Sheets, 107 bytes</h1>
 <pre><code>=let(f,lambda(f,let(α,randbetween(448,800),β,randbetween(448,800),γ,2048-α-β,if(γ&lt;801,{α,β,γ},f(f)))),f(f))
 </code></pre>
 <p>None of the three numbers can be less than 448 because 2,048 - 2 * 800 = 448. The first two can therefore be randomly chosen from the range <code>[448..800]</code>, and the remainder constitutes the third number, unless it is greater than 800, in which case we re-evaluate recursively.</p>
@@ -73,7 +80,7 @@ f=n=&gt;(a=R())+(b=R())+(c=R())^2048?f():[a,b,c]
 )
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 13 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 13 bytes</h1>
 <pre><code>800ɾ3↔'∑k¦=;℅
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCI4MDDJvjPihpQn4oiRa8KmPTvihIUiLCIiLCIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
