--- a/q/274485.html
+++ b/q/274485.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>008</td><td>Charcoal</td><td>240728T135554Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274508#274508">Neil</a></td></tr>
-<tr d-ix="1"><td>005</td><td>Haskell + hgl</td><td>240728T134833Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274506#274506">Wheat Wi</a></td></tr>
-<tr d-ix="2"><td>008</td><td>Retina 0.8.2</td><td>240728T134116Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274505#274505">Neil</a></td></tr>
-<tr d-ix="3"><td>004</td><td>K ngn/k</td><td>240728T133436Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274504#274504">akamayu</a></td></tr>
-<tr d-ix="4"><td>027</td><td>PowerShell</td><td>240728T121823Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274500#274500">user3141</a></td></tr>
-<tr d-ix="5"><td>036</td><td>Python 3</td><td>240728T115156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274497#274497">matteo_c</a></td></tr>
-<tr d-ix="6"><td>064</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
+<tr d-ix="0"><td>036</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
+<tr d-ix="1"><td>008</td><td>Charcoal</td><td>240728T135554Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274508#274508">Neil</a></td></tr>
+<tr d-ix="2"><td>005</td><td>Haskell + hgl</td><td>240728T134833Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274506#274506">Wheat Wi</a></td></tr>
+<tr d-ix="3"><td>008</td><td>Retina 0.8.2</td><td>240728T134116Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274505#274505">Neil</a></td></tr>
+<tr d-ix="4"><td>004</td><td>K ngn/k</td><td>240728T133436Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274504#274504">akamayu</a></td></tr>
+<tr d-ix="5"><td>027</td><td>PowerShell</td><td>240728T121823Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274500#274500">user3141</a></td></tr>
+<tr d-ix="6"><td>036</td><td>Python 3</td><td>240728T115156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274497#274497">matteo_c</a></td></tr>
 <tr d-ix="7"><td>015</td><td>Arturo</td><td>240728T112337Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274496#274496">chunes</a></td></tr>
 <tr d-ix="8"><td>003</td><td>Uiua SBCS</td><td>240728T105800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274495#274495">chunes</a></td></tr>
 <tr d-ix="9"><td>058</td><td>JavaScript Node.js</td><td>240728T104100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274493#274493">Andrew B</a></td></tr>
@@ -43,7 +43,19 @@
 <tr d-ix="14"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
 <tr d-ix="15"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 8 bytes</h1>
+<div id="pu0" class="pu"><h1>Google Sheets, 36 bytes</h1>
+<pre><code>=chooserows(unique(tocol(A:A,1)),-1)
+</code></pre>
+<p><strong>64 bytes</strong>:</p>
+<pre><code>=+let(β,A:A,γ,sort(row(β)),sort(β,1=countifs(β,β,γ,&quot;&lt;=&quot;&amp;γ),,γ,))
+</code></pre>
+<p>...or:</p>
+<pre><code>=chooserows(filter(A:A,1=map(A:A,lambda(β,countif(A1:β,β)))),-1)
+</code></pre>
+<p>Put the array in column <code>A1:A</code> and the formula in cell <code>B1</code>.</p>
+<p><img src="https://i.sstatic.net/cWoifoPg.png" alt="screenshot" /></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 8 bytes</h1>
 <pre><code>§θ⌈Ｅθ⌕θι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMOxxDMvJbVCo1BHwTexIjO3NFfDN7EAxHXLzEsB0ZmaIGD9/7@jrpOjn6MPmPRz1PVxdPqvW5YDAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Turned out to be a port of @xnor's answer.</p>
@@ -58,7 +70,7 @@
            Implicitly print
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 5 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 5 bytes</h1>
 <pre><code>gj&lt;nb
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=bZBNDoIwEIXjllOMO03GxPJTkcAB3LEnxGAArZYfEU7jho3hTHoaB1DEaNKmed-8NzPptTkEl1MkZX2fiiTPihLOVSBFLKIQ3CKSVRgpr4J7q8p4YTaxsz_a6a5Xj4mSBCIFB8JMAUi2MMsLsCGekwLwwGNgWbBJS78DSABV1FAftE5KRfapL_F9BkZ-8hjIkH_lDKJ8lDXIpxPVusvb6mguzfnq2PajXUbplrKRa0Ue_oeauMafDn7_JXXdv08" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -90,7 +102,7 @@
 <li><code>nχ</code> and <code>nxy</code> could use versions precomposed with <code>my</code> and <code>so</code>.</li>
 </ul>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 8 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 8 bytes</h1>
 <pre><code>D`.
 !`.$
 </code></pre>
@@ -102,13 +114,13 @@
 </code></pre>
 <p>Keep the last remaining character.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 4 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 4 bytes</h1>
 <p>The last <code>*|</code> unique <code>?</code> element.</p>
 <pre><code>*|?:
 </code></pre>
 <p><a href="https://ngn.bitbucket.io/k#eJxLs9Kqsbfi4kpzUHLUdXL0c/QBk36Ouj6OTkoAcrEHVA==" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 27 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 27 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>($args|% *ay|select -u)[-1]
 </code></pre>
@@ -118,20 +130,11 @@
 </code></pre>
 <p>Converts the input string to a char array by calling the string's member &quot;ToCharArray&quot;, then selecting only unique characters, and picking the last char.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda x:list({a:0for a in x})[-1]
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/7/P802JzE3KSVRocIqJ7O4RKM60cogLb9IIVEhM0@holYzWtcw9n9BUWZeiUaahpKjrpOjn6MPmPRz1PVxdFLS1PwPAA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu6" class="pu"><h1>Google Sheets, 64 bytes</h1>
-<pre><code>=+let(β,A:A,γ,sort(row(β)),sort(β,1=countifs(β,β,γ,&quot;&lt;=&quot;&amp;γ),,γ,))
-</code></pre>
-<p>...or:</p>
-<pre><code>=chooserows(filter(A:A,1=map(A:A,lambda(β,countif(A1:β,β)))),-1)
-</code></pre>
-<p>Put the array in column <code>A1:A</code> and the formula in cell <code>B1</code>.</p>
-<p><img src="https://i.sstatic.net/cWoifoPg.png" alt="screenshot" /></p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 15 bytes</h1>
 <pre><code>$=&gt;[last∪&lt;=&amp;]
