--- a/q/68318.html
+++ b/q/68318.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>268</td><td>Pascal</td><td>240728T160000Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/274514#274514">Kai Burg</a></td></tr>
+<tr d-ix="0"><td>265</td><td>Pascal</td><td>240728T160000Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/274514#274514">Kai Burg</a></td></tr>
 <tr d-ix="1"><td>049</td><td>Vyxal</td><td>210910T112419Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/235231#235231">emanresu</a></td></tr>
 <tr d-ix="2"><td>078</td><td>J</td><td>160330T080740Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/76572#76572">Leaky Nu</a></td></tr>
 <tr d-ix="3"><td>112</td><td>Python 3</td><td>160101T142146Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/68335#68335">Sherlock</a></td></tr>
@@ -44,11 +44,14 @@
 <tr d-ix="15"><td>085</td><td>MATL</td><td>160101T030209Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/68328#68328">Luis Men</a></td></tr>
 <tr d-ix="16"><td>075</td><td>CJam</td><td>160101T020211Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/68326#68326">Zach Gat</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>Pascal, 268 B</h2>
-<pre class="lang-pascal prettyprint-override"><code>program z(input,output);var t:integer;s:packed array[1..7] of char;begin
-read(t);case(t-4)mod 12 of
-0:s:='Rat';1:s:='Ox';2:s:='Tiger';3:s:='Rabbit';4:s:='Dragon';5:s:='Snake';6:s:='Horse';7:s:='Goat';8:s:='Monkey';9:s:='Rooster';10:s:='Dog';11:s:='Pig'
-end;write(s)end.
+<div id="pu0" class="pu"><h2>Pascal, 265 B</h2>
+<p>This complete <code>program</code> just requires a processor compliant with ISO standard 7185 “Standard Pascal” (level 0 is sufficient).
+In Pascal a <code>packed array[1‥N] of char</code> (with <code>N</code> &gt; 1) constitutes a string.
+An assignment of a too short string value is automatically extended with space characters to the string’s length.
+That means the program outputs <a href="https://CodeGolf.meta.StackExchange.com/a/24952/94076">trailing spaces</a>.</p>
+<pre class="lang-pascal prettyprint-override"><code>program z(input,output);var t:integer;s:packed array[1..7]of char;begin
+read(t);case t mod 12 of
+0:s:='Monkey';1:s:='Rooster';2:s:='Dog';3:s:='Pig';4:s:='Rat';5:s:='Ox';6:s:='Tiger';7:s:='Rabbit';8:s:='Dragon';9:s:='Snake';10:s:='Horse';11:s:='Goat'end;write(s)end.
 </code></pre>
 <p>Long:</p>
 <pre class="lang-pascal prettyprint-override"><code>program chineseZodiacOfTheYear(input, output);
@@ -57,19 +60,19 @@ end;write(s)end.
         result: packed array[1‥7] of char;
     begin
         readLn(input, year);
-        case (year − 4) mod 12 of
-             0: result ≔ 'Rat';
-             1: result ≔ 'Ox';
-             2: result ≔ 'Tiger';
-             3: result ≔ 'Rabbit';
-             4: result ≔ 'Dragon';
-             5: result ≔ 'Snake';
-             6: result ≔ 'Horse';
-             7: result ≔ 'Goat';
-             8: result ≔ 'Monkey';
-             9: result ≔ 'Rooster';
-            10: result ≔ 'Dog';
-            11: result ≔ 'Pig';
+        case year mod 12 of
+             0: result ≔ 'Monkey';
+             1: result ≔ 'Rooster';
+             2: result ≔ 'Dog';
+             3: result ≔ 'Pig';
+             4: result ≔ 'Rat';
+             5: result ≔ 'Ox';
+             6: result ≔ 'Tiger';
+             7: result ≔ 'Rabbit';
+             8: result ≔ 'Dragon';
+             9: result ≔ 'Snake';
+            10: result ≔ 'Horse';
+            11: result ≔ 'Goat'
         end;
         writeLn(output, result)
     end.
